Resolved footer and general spacing issues

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header {
 footer {
     display: flex;
     min-width: 100%;
+    min-height: 50px;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -31,22 +32,27 @@ a:hover {
 
 .left-links {
     display: flex;
-    flex-grow: 1;
+    width: 100%;
     align-items: center;
-    margin-left: 20px;
+    margin: 0px 50px 0px 20px;
+    flex-wrap: wrap;
 }
 
 .right-links {
     display: flex;
-    flex-grow: 1;
+    width: 100%;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 20px;
+    flex-wrap: wrap;
 }
 
 .center-links {
     display: flex;
+    width: 100%;
+    min-width: 200px;
     justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .footer-links {
